[ICU-6635] Updated the implementation of BCP47 language tag support, locale builder, etc to match the latest JDK locale enhancement proposal. X-Commit-URL: https://ssl.icu-project.org/trac/changeset/26804 Former-commit-id: a84445865cd354432c5ba2bd6dd5e75f28d3f506